<resources>
    <string name="app_name">Colors</string>
    <string name="create_an_rgb_color">Create an RGB Color</string>
    <string name="rgb_desc">Add two hexadecimal characters between 0-9, A-F or a-f without the \'#\' for each chalnnel.</string>
    <string name="red_channel">Red channel</string>
    <string name="green_channel">Green channel</string>
    <string name="blue_channel">Blue channel</string>
    <string name="create_rgb_color">CREATE RGB COLOR</string>
    <string name="created_color">Created color</string>
</resources>